--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -127,45 +127,37 @@ Singapore, 117417<br>
     <p>Selected courses taught: </p>
 <table width="719" height="145" border="1">
   <tr>
-    <td width="82">Sememster</td>
-    <td width="74">Course</td>
-    <td width="44">Class Size</td>
-    <td width="129">Overall Student Rating</td>
-    <td width="138">Departmental Average</td>
-    <td width="212"><p>Detailed Report</p>
-      <p>&nbsp;</p></td>
+    <td width="82"><div align="center">Sememster</div></td>
+    <td width="74"><div align="center">Course</div></td>
+    <td width="44"><div align="center">Class Size</div></td>
+    <td width="129"><div align="center">Overall Student Rating</div></td>
+    <td width="138"><div align="center">Departmental Average</div></td>
+    <td width="212"><p align="center">Detailed Report</p>
+      <p align="center">&nbsp;</p></td>
   </tr>
   <tr>
-    <td>2008/2009 Semester 2 (Spring)</td>
-    <td>CS6230</td>
-    <td>10</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td height="27">2009/2010 Semester 1 (Fall)</td>
+    <td height="27">2009/2010 Semester 2 (Spring)</td>
     <td>CS3235</td>
-    <td>87</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td>73</td>
+    <td>4.06</td>
+    <td>4.01</td>
+    <td><a href="AY0910-S2.pdf">link</a></td>
   </tr>
   <tr>
     <td height="27">2011/2012 Semester 2 (Spring)</td>
     <td>CS5231</td>
-    <td>80</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td>82</td>
+    <td>4.59</td>
+    <td>4.19</td>
+    <td><a href="AY1112-S2.pdf">link</a></td>
   </tr>
   <tr>
     <td height="27"><p>2012/2013 Semester 1 (Fall)</p></td>
     <td>CS4238</td>
-    <td>38</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td>34</td>
+    <td>4.47</td>
+    <td>4.10</td>
+    <td><a href="AY1213-S1.pdf">link</a></td>
   </tr>
 </table>
 <h3>Graduated students</h3>
