--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -125,39 +125,38 @@ Singapore, 117417<br>
     <h2>TEACHING</h2>
     <p>I have been taking a leading role in redesging the system security cirruculum. </p>
     <p>Selected courses taught: </p>
-<table width="719" height="145" border="1">
+<table width="683" height="145" border="1">
   <tr>
-    <td width="82"><div align="center">Sememster</div></td>
-    <td width="74"><div align="center">Course</div></td>
-    <td width="44"><div align="center">Class Size</div></td>
-    <td width="129"><div align="center">Overall Student Rating</div></td>
-    <td width="138"><div align="center">Departmental Average</div></td>
-    <td width="212"><p align="center">Detailed Report</p>
-      <p align="center">&nbsp;</p></td>
+    <td width="115"><div align="center">Sememster</div></td>
+    <td width="146"><div align="center">Course</div></td>
+    <td width="64"><div align="center">Class Size</div></td>
+    <td width="108"><div align="center">Overall  Effectiveness Rating</div></td>
+    <td width="107"><div align="center">Departmental Average</div></td>
+    <td width="103"><div align="center">Detailed Report</div></td>
   </tr>
   <tr>
-    <td height="27">2009/2010 Semester 2 (Spring)</td>
-    <td>CS3235</td>
-    <td>73</td>
-    <td>4.06</td>
-    <td>4.01</td>
-    <td><a href="AY0910-S2.pdf">link</a></td>
+    <td height="27"><div align="center">2009/2010 Semester 2 (Spring):</div></td>
+    <td><div align="center">CS3235: <em>Introduction to Comput Security</em></div></td>
+    <td><div align="center">73</div></td>
+    <td><div align="center">4.06</div></td>
+    <td><div align="center">4.01</div></td>
+    <td><div align="center"><a href="AY0910-S2.pdf">link</a></div></td>
   </tr>
   <tr>
-    <td height="27">2011/2012 Semester 2 (Spring)</td>
-    <td>CS5231</td>
-    <td>82</td>
-    <td>4.59</td>
-    <td>4.19</td>
-    <td><a href="AY1112-S2.pdf">link</a></td>
+    <td height="27"><div align="center">2011/2012 Semester 2 (Spring)</div></td>
+    <td><div align="center">CS5231: <em>Systems Security</em></div></td>
+    <td><div align="center">82</div></td>
+    <td><div align="center">4.59</div></td>
+    <td><div align="center">4.19</div></td>
+    <td><div align="center"><a href="AY1112-S2.pdf">link</a></div></td>
   </tr>
   <tr>
-    <td height="27"><p>2012/2013 Semester 1 (Fall)</p></td>
-    <td>CS4238</td>
-    <td>34</td>
-    <td>4.47</td>
-    <td>4.10</td>
-    <td><a href="AY1213-S1.pdf">link</a></td>
+    <td height="27"><div align="center">2012/2013 Semester 1 (Fall)</div></td>
+    <td><div align="center">CS4238: <em>Computer Security Practice</em></div></td>
+    <td><div align="center">34</div></td>
+    <td><div align="center">4.47</div></td>
+    <td><div align="center">4.10</div></td>
+    <td><div align="center"><a href="AY1213-S1.pdf">link</a></div></td>
   </tr>
 </table>
 <h3>Graduated students</h3>
