--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -10,7 +10,7 @@ lang="en" xml:lang="en">
 <body>
 
 <div class="banner">
-<h1>Dr. LIANG Zhenkai</h1>
+<h1>Zhenkai Liang</h1>
 </div>
 
 <div class="wrap">
@@ -42,16 +42,16 @@ Singapore, 117417<br>
 	Thank you for taking your valuable time to look at my PnT (promotion and tenure) documents. 
 
 	This is a short summary of my achievements in research, teaching, and service. If you have suggestions or need more specific information, please send me an email at liangzk@comp.nus.edu.sg. I greatly appreciate it. </p>
-    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and developed research areas in web and browser security, binary componentisolation, software debugging/testing, and mobile security. My research has been supported by fundings of over S$1.8 million (S$1.2 million as PI), with publications in top security and software engineering conferences and journals, such as IEEE Security and Privacy, NDSS, ESORICS, ACM FSE, ACM TISSEC, and ACM TOSEM. Now the system security research group has expanded to a group with two main faculty members and 15 students and research assistants. I have graduated three Master students and one Ph.D. student. Another two Ph.D. students will finish their defense in summer of 2013. </p>
+    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and advanced research in areas of web and browser security, software component isolation, software debugging/testing, and mobile security. My research has been supported by fundings of over S$1.8 million (S$1.2 million as PI), with publications in top security and software engineering conferences and journals, such as IEEE Security and Privacy, ACM CCS, USENIX Security Symposium, NDSS, ESORICS, ACSAC, ACM FSE, ACM TISSEC, and ACM TOSEM. Now the system security research group has expanded to a group with two main faculty members and 15 students and research assistants. I have graduated three Master students and one Ph.D. student. Another two Ph.D. students will defend their disertation in summer of 2013. </p>
     <dl>
       <dt><em><strong>Teaching Summary</strong></em>: During the past five years, I redeveloped the contents of two security courses, CS3235 <em>Introduction to Computer Security</em> (Undergraduate) and CS5231 <em>Systems Security</em> (Graduate), and created a new course, CS4238 <em>Computer Security Practice</em> (Undergraduate). I introduced a new teaching methodolgy of combining practice in class instruction. My courses and teaching methodology are well received by students (4.5 out of 5 by student evaluation in recent semesters). I also helped to develop security contents in a few undergraduate courses. </dt>
       </dl>
-    <p><em><strong>Service Summary</strong></em>: I have served as the TPC member of server conferences and workshops, including WWW 2011 and NDSS 2013. I'm also the editorial board member of IJSN. I have served as the reviewer of a few major conference and journals, including ACM TISSEC, IEEE TDSC, etc. For university services, I have been a member of the Graduate Study (Admission) Committee of NUS School of Computing. I have been maintaining active connections with Singapore's government agencies, research labs, and companies related to cyber security. I am actively driving the effort to establish a platform for academia, government, and companies to collaborate to facilitate research and education of cyber security in Singapore. </p>
+    <p><em><strong>Service Summary</strong></em>: I have served as the TPC member of several conferences and workshops, including WWW 2011 and NDSS 2013. I'm also the editorial board member of IJSN. I have served as the reviewer of a few major conference and journals, including ACM TISSEC, IEEE TDSC, etc. For university services, I have been a member of the Graduate Study (Admission) Committee of NUS School of Computing. I have been maintaining active connections with Singapore's government divisions, research labs, and companies related to cyber security. I am actively driving the effort to establish a platform in Singapore for academia, government, and companies to collaborate to facilitate research and education of cyber security. </p>
     <dl>
       <dd>&nbsp;</dd>
     </dl>
     <h2>RESEARCH</h2>
-    <p>After joining NUS in 2008, my research has been primarily focus on browser security, software debugging, and softare debugging/testing. </p>
+    <p>My research has been primarily focus on browser security, software debugging, and softare debugging/testing. </p>
     <p>
       <h3>Major research achievements.</h3>
     </p>
@@ -124,18 +124,19 @@ Singapore, 117417<br>
 
     <h2>TEACHING</h2>
     <p>I have been taking a leading role in redesging the system security cirruculum. </p>
-    <p>Selected courses taught: </p>
+    <p>Selected courses results: </p>
 <table width="683" height="145" border="1">
   <tr>
-    <td width="115"><div align="center">Sememster</div></td>
-    <td width="146"><div align="center">Course</div></td>
+    <td width="109"><div align="center">Sememster</div></td>
+    <td width="152"><div align="center">Course</div></td>
     <td width="64"><div align="center">Class Size</div></td>
-    <td width="108"><div align="center">Overall  Effectiveness Rating</div></td>
-    <td width="107"><div align="center">Departmental Average</div></td>
+    <td width="115"><div align="center">Overall  Effectiveness Rating (out of 5)</div></td>
+    <td width="100"><div align="center">Departmental Average <br />
+      (out of 5)</div></td>
     <td width="103"><div align="center">Detailed Report</div></td>
   </tr>
   <tr>
-    <td height="27"><div align="center">2009/2010 Semester 2 (Spring):</div></td>
+    <td height="27"><div align="center">2009/2010 Semester 2 (Spring 2010):</div></td>
     <td><div align="center">CS3235: <em>Introduction to Comput Security</em></div></td>
     <td><div align="center">73</div></td>
     <td><div align="center">4.06</div></td>
@@ -143,16 +144,18 @@ Singapore, 117417<br>
     <td><div align="center"><a href="AY0910-S2.pdf">link</a></div></td>
   </tr>
   <tr>
-    <td height="27"><div align="center">2011/2012 Semester 2 (Spring)</div></td>
-    <td><div align="center">CS5231: <em>Systems Security</em></div></td>
+    <td height="27"><div align="center">2011/2012 Semester 2 (Spring 2012)</div></td>
+    <td><div align="center">CS5231: <br />
+      <em>Systems Security</em></div></td>
     <td><div align="center">82</div></td>
     <td><div align="center">4.59</div></td>
     <td><div align="center">4.19</div></td>
     <td><div align="center"><a href="AY1112-S2.pdf">link</a></div></td>
   </tr>
   <tr>
-    <td height="27"><div align="center">2012/2013 Semester 1 (Fall)</div></td>
-    <td><div align="center">CS4238: <em>Computer Security Practice</em></div></td>
+    <td height="27"><div align="center">2012/2013 Semester 1 (Fall 2012)</div></td>
+    <td><div align="center">CS4238: <em><br />
+      Computer Security Practice</em></div></td>
     <td><div align="center">34</div></td>
     <td><div align="center">4.47</div></td>
     <td><div align="center">4.10</div></td>
