--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -42,36 +42,32 @@ Singapore, 117417<br>
 	Thank you for taking your valuable time to look at my PnT (promotion and tenure) documents. 
 
 	This is a short summary of my achievements in research, teaching, and service. If you have suggestions or need more specific information, please send me an email at liangzk@comp.nus.edu.sg. I greatly appreciate it. </p>
-    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and advanced research in areas of web and browser security, software component isolation, software debugging/testing, and mobile security. My research has been supported by fundings of over S$1.8 million (S$1.2 million as PI), with publications in top security and software engineering conferences and journals, such as IEEE Security and Privacy, ACM CCS, USENIX Security Symposium, NDSS, ESORICS, ACSAC, ACM FSE, ACM TISSEC, and ACM TOSEM. Now the system security research group has expanded to a group with two main faculty members and 15 students and research assistants. I have graduated three Master students and one Ph.D. student. Another two Ph.D. students will defend their disertation in summer of 2013. </p>
+    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and advanced research in areas of web and browser security, software component isolation, software debugging, and mobile security. My research has been supported by fundings of over S$1.9 million (S$1.2 million as PI), with publications in top security and software engineering conferences and journals, such as IEEE Security and Privacy, ACM CCS, USENIX Security Symposium, NDSS, ESORICS, ACSAC, ACM FSE, ACM TISSEC, and ACM TOSEM. Now the system security research group has expanded to a group with two main faculty members and 15 students and research assistants. I have graduated three Master students and one Ph.D. student. Another two Ph.D. students will defend their disertation in summer of 2013. </p>
     <dl>
-      <dt><em><strong>Teaching Summary</strong></em>: During the past five years, I redeveloped the contents of two security courses, CS3235 <em>Introduction to Computer Security</em> (Undergraduate) and CS5231 <em>Systems Security</em> (Graduate), and created a new course, CS4238 <em>Computer Security Practice</em> (Undergraduate). I introduced a new teaching methodolgy of combining practice in class instruction. My courses and teaching methodology are well received by students (4.5 out of 5 by student evaluation in recent semesters). I also helped to develop security contents in a few undergraduate courses. </dt>
+      <dt><em><strong>Teaching Summary</strong></em>: During the past five years, I completely redeveloped the contents of two security courses, CS3235 <em>Introduction to Computer Security</em> (Undergraduate) and CS5231 <em>Systems Security</em> (Graduate), and created a new course, CS4238 <em>Computer Security Practice</em> (Undergraduate). I introduced a new teaching methodolgy of combining practice in class instruction. My courses and teaching methodology are well received by students (4.5 out of 5 by student evaluation in recent semesters). I also helped to develop security contents in a few undergraduate courses. </dt>
       </dl>
     <p><em><strong>Service Summary</strong></em>: I have served as the TPC member of several conferences and workshops, including WWW 2011 and NDSS 2013. I'm also the editorial board member of IJSN. I have served as the reviewer of a few major conference and journals, including ACM TISSEC, IEEE TDSC, etc. For university services, I have been a member of the Graduate Study (Admission) Committee of NUS School of Computing. I have been maintaining active connections with Singapore's government divisions, research labs, and companies related to cyber security. I am actively driving the effort to establish a platform in Singapore for academia, government, and companies to collaborate to facilitate research and education of cyber security. </p>
-    <dl>
-      <dd>&nbsp;</dd>
-    </dl>
-    <h2>RESEARCH</h2>
-    <p>My research has been primarily focus on browser security, software debugging, and softare debugging/testing. </p>
-    <p>
-      <h3>Major research achievements.</h3>
-    </p>
-    <p>Isolation in browsers, rethink binary ioslation, program analysis</p>
+<h2>RESEARCH    </h2>
+    <p>Methodology, high-level overview. Rethink</p>
+    <h3>Major research achievements.
+      </p>
+    </h3>
+    <p>Isolation in browsers, binary ioslation, program analysis</p>
     <h3>Representitive papers. </h3>
-    <h4>Software Isolation</h4>
+    <h4>Software Component Isolation</h4>
     <ul>
       <li><strong>Codejail: Application-transparent Isolation of Libraries with Tight Program Interactions</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/esorics12.pdf">PDF</a>]<br />
-        <strong>Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai Liang.</strong> <br />
+        Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai Liang. <br />
         In the 17th European Symposium on Research in Computer Security (ESORICS), 2012.</li>
       <li><strong>A Framework to Eliminate Backdoors from Response Computable Authentication</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ieee12.pdf">PDF</a>]<br />
-        <strong>Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding, Zhenkai Liang, and Wei Zou. </strong><br />
+        Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding, Zhenkai Liang, and Wei Zou. <br />
         In the IEEE Symposium on Security and Privacy, 2012.</li>
       <li><strong>Alcatraz: An Isolated Environment for Experimenting with Untrusted Software</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/tissec09.pdf">PDF</a>]<br />
-        <strong>Zhenkai Liang, Weiqing Sun, R.Sekar, and V.N. Venkatakrishnan.</strong><br />
+        Zhenkai Liang, Weiqing Sun, R.Sekar, and V.N. Venkatakrishnan.<br />
         In ACM Transactions on Information and System Security (TISSEC), Volume 12, Issue 3, January 2009. </li>
       <li><strong>Isolated Program Execution: An Application Transparent Approach for Executing Untrusted Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/acsac03.pdf">PDF</a>]<br />
-        <strong>(Outstanding paper award)</strong><br />
         Zhenkai Liang, V.N. Venkatakrishnan, and R. Sekar.<br />
-        In <em>the 19th Annual Computer Security Applications Conference (ACSAC)</em>, 2003.    </li>
+        In <em>the 19th Annual Computer Security Applications Conference (ACSAC)</em>, 2003.    <strong>(Outstanding paper award)</strong></li>
     </ul>
     <h4>Attack Diagnosis and Response</h4>
     <ul>
@@ -79,52 +75,64 @@ Singapore, 117417<br>
         Mingwei Zhang, Aravind Prakash, Xiaolei Li, Zhenkai Liang, and Heng Yin.<br />
         In the 19th Annual Network &amp; Distributed System Security Symposium (NDSS), 2012.</li>
       <li><strong>HookFinder: Identifying and Understanding Malware Hooking Behaviors</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ndss08.pdf">PDF</a>]<br />
-        <strong>Heng Yin, Zhenkai Liang, and Dawn Song.</strong><br />
+        Heng Yin, Zhenkai Liang, and Dawn Song.<br />
         In <em>the </em>1<em>5th Annual Network and Distributed System Security Symposium (NDSS)</em>,  2008. </li>
       <li><strong>Fast and Automated Generation of Attack Signatures: A Basis for Building Self-Protecting Servers</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ccs05.pdf">PDF</a>]<br />
         Zhenkai Liang and R. Sekar.<br />
         In <em>the </em><em>12th ACM Conference on Computer and Communications Security (CCS)</em>, 2005.</li>
     </ul>
-<h4>Web and browser security</h4>
+<h4>Web and Browser Security</h4>
     <ul>
-      <li><strong>A Comprehensive Client-side Behavior Model for Diagnosing Attacks in Ajax Applications</strong>. Xinshu Dong, Kailas Patil, Jian Mao, and Zhenkai Liang. <br />
+      <li><strong>A Comprehensive Client-side Behavior Model for Diagnosing Attacks in Ajax Applications</strong>. <br />
+        Xinshu Dong, Kailas Patil, Jian Mao, and Zhenkai Liang. <br />
         In the <em>18th International Conference on Engineering of Complex Computer Systems (ICECCS)</em>,  2013.</li>
       <li><strong>AdSentry: Comprehensive and Flexible Confinement of JavaScript-based Advertisements</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/acsac11.pdf">PDF</a>]<br />
-        <strong>Xinshu Dong, Minh Tran, Zhenkai Liang, and Xuxian Jiang.</strong><br />
+        Xinshu Dong, Minh Tran, Zhenkai Liang, and Xuxian Jiang.<br />
         In <em>the 27th Annual Computer Security Applications Conference (ACSAC)</em>,  2011.</li>
       <li><strong>Towards Fine-Grained Access Control in JavaScript Contexts</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/icdcs11.pdf">PDF</a>]<br />
-        <strong>Kailas Patil, Xinshu Dong, Xiaolei Li, Zhenkai Liang, and Xuxian Jiang.</strong><br />
+        Kailas Patil, Xinshu Dong, Xiaolei Li, Zhenkai Liang, and Xuxian Jiang.<br />
         In <em>the 31st IEEE International Conference on Distributed Computing Systems (ICDCS)</em>,  2011.</li>
     </ul>
-<h4>Software debugging and testing</h4>
+<h4>Software Error Detection and Debugging</h4>
 <ul>
   <li><strong>DARWIN: An Approach for Debugging Evolving Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/tosem12.pdf">PDF</a>]<br />
-    <strong>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil Vaswani.</strong><br />
+    Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil Vaswani.<br />
     In ACM Transactions on Software Engineering and Methodology (TOSEM), Volume 21, Issue 3, 2012.</li>
   <li><strong>Golden Implementation Driven Software Debugging</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/fse10.pdf">PDF</a>]<br />
-    <strong>Ansuman Banerjee, Abhik Roychoudhury, Johannes A. Harlie, and Zhenkai Liang</strong>.<br />
+    Ansuman Banerjee, Abhik Roychoudhury, Johannes A. Harlie, and Zhenkai Liang.<br />
     In <em>the ACM SIGSOFT 18th International Symposium on Foundations of Software Engineering (FSE)</em>,  2010.</li>
-  <li><strong>DARWIN: An Approach for Debugging Evolving Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/fse09.pdf">PDF</a>]<br />
-    <strong>(Distinguished paper award)<br />
+  <li><strong>DARWIN: An Approach for Debugging Evolving Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/fse09.pdf">PDF</a>]<strong><br />
       </strong>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, Kapil Vaswani.<br />
-    In <em>the ESEC and ACM SIGSOFT Symposium on the Foundations of Software Engineering (ESEC-FSE</em>), 2009.</li>
+    In <em>the ESEC and ACM SIGSOFT Symposium on the Foundations of Software Engineering (ESEC-FSE</em>), 2009. <strong>(Distinguished paper award)</strong></li>
   <li><strong>Towards Automatic Discovery of Deviations in Binary Implementations with Applications to Error Detection and Fingerprint Generation</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/sec07.pdf">PDF</a>]<br />
-    <strong>(Best paper award)</strong><br />
     David Brumley, Juan Caballero, Zhenkai Liang, James Newsome, and Dawn Song.<br />
-    In <em>the 16th USENIX Security Symposium</em>, 2007.</li>
+    In <em>the 16th USENIX Security Symposium</em>, 2007. <strong>(Best paper award)</strong></li>
 </ul>
     <p>
       <h3>Research awards. </h3>
-      <p></p>
-    </p>
-    <p>
-      <h3>Funding. </h3>
+      <ul>
+        <li>ACM SIGSOFT Distinguished Paper Award, 2009.</li>
+        <li>Young Investigator Award, National University of Singapore, 2009.</li>
+        <li>Best Paper Award, the 16th USENIX Security Symposium, 2007.</li>
+        <li>Outstanding Paper Award, the 19th Annual Computer Security Applications Conference (ACSAC), 2003. </li>
+      </ul>
+<h3>Funding.</h3>
+<p>My research has been generously supported by fundings from Singapore Ministry of Education (MOE), Ministry of Defense (MINDEF), and NUS through the following projects. (The project values do not include indirect cost.) </p>
+      <ul>
+        <li>(PI) <em>Establishing Trusted Web Sessions on Untrusted User Devices</em>. (MOE) AcRF Tier-2, S$383,452, April 2013 – March 2016.</li>
+        <li>(PI) <em>Securing the Android Mobile Platform against Browser-based Attacks</em>. (MOE) FRC, S$152,000, August 2011 – August 2014.</li>
+        <li>(co-PI) <em>Analyzing the Security of Software in Binary Form</em>. (MINDEF) DRTech, S$371,000, April 2010 – April 2014.</li>
+        <li>(PI) <em>A Framework for General Security Support in Web Browsers</em>. NUS Young Investigator Award, S$477,050, February 2009 – August 2012.</li>
+        <li>(co-PI) <em>Symbolic Taint Analysis</em>. (MINDEF) DRTech DIRP, S$397,290, January 2009 – July 2012.</li>
+        <li>(PI) <em>Improving Security Incident Response by Automatic Vulnerability Diagnosis</em>. (MOE) FRC, S$167,880, October 2008 – September 2011.</li>
+      </ul>
     </p>
     <p>&nbsp;</p>
 
     <h2>TEACHING</h2>
-    <p>I have been taking a leading role in redesging the system security cirruculum. </p>
-    <p>Selected courses results: </p>
+    <p>I have been taking a leading role in redesging the system security cirruculum. Redeveloped CS3235 and CS5231. Created CS4238, designed a new teaching lab for system security. </p>
+    <p>Teaching metholodogy. </p>
+    <p>I have been improving in my teaching skills over the years. </p>
 <table width="683" height="145" border="1">
   <tr>
     <td width="109"><div align="center">Sememster</div></td>
@@ -164,10 +172,32 @@ Singapore, 117417<br>
 </table>
 <h3>Graduated students</h3>
 <p>Master Students.</p>
+<ul>
+  <li>Zhengheng Goh. 2010</li>
+  <li>Sai Sathyanarayan. 2012</li>
+  <li>Mingwei Zhang. 2013</li>
+</ul>
 <p>Ph.D. Students. </p>
+<ul>
+  <li>Dawei Qi (Co-advisor). 2013</li>
+  <li>Xinshu Dong. 2013. (Dissertation submitted)</li>
+  <li>Kailas Patil. 2013. (Dissertation submitted)</li>
+</ul>
 <h2>SERVICE</h2>
 <h3>Service as committee members. </h3>
-
+<ul>
+  <li>Member of Editorial Board, International Journal of Security and Networks (IJSN), from July 2011. </li>
+  <li>Student Travel Grant Co-Chair, ACM Conference on Computer and Communications Security (CCS), 2012</li>
+  <li>Co-chair of security theme, ACCESS Congress, 2013. </li>
+  <li>TPC member, the Annual Network and Distributed System Security Symposium (NDSS), 2013.</li>
+  <li>TPC member, the International World Wide Web Conference (WWW), 2011.</li>
+  <li>TPC member, ASIACCS 2013. </li>
+  <li>TPC member, ACNS 2012</li>
+  <li>TPC member, the European Workshop on Systems Security (EuroSec), 2009, 2010, 2011. </li>
+  <li>TPC member, ISC 2011, 2012.</li>
+  <li>TPC member, PASSAT 2011, 2012. </li>
+  <li>TPC member, the International Conference on Information Systems Security (ICISS), 2008, 2009, 2010, 2012.</li>
+</ul>
     </div>
     <table>
       <tr><td></td></tr>
