--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -24,10 +24,12 @@ National University of Singapore<br>
 Mailing address:<br>
 13 Computing Drive<br>
 Computing 1, #03-27<br>
-Singapore, 117417<br>
-<br>
-
-</div>
+Singapore, 117417
+<p style="color: #000000">Email: liangzk@comp.nus.edu.sg
+<p style="color: #000000">Phone: +65-65161226<br>
+  <br>
+  
+  </div>
 
     
       <!-- MAIN CONTENT STARTS HERE -->
@@ -39,14 +41,14 @@ Singapore, 117417<br>
 
     <div  class="outline">
     <p>
-	Thank you for taking your valuable time to look at my PnT (promotion and tenure) documents. 
+	Thank you for taking your valuable time to look at my promotion and tenure documents. 
 
-	This is a short summary of my achievements in research, teaching, and service. If you have suggestions or need more specific information, please send me an email at liangzk@comp.nus.edu.sg. I greatly appreciate it. </p>
-    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and advanced research in areas of web and browser security, software component isolation, software debugging, and mobile security. My research has been supported by fundings of over S$1.9 million (S$1.2 million as PI), with publications in top security and software engineering conferences and journals, such as IEEE Security and Privacy, ACM CCS, USENIX Security Symposium, NDSS, ESORICS, ACSAC, ACM FSE, ACM TISSEC, and ACM TOSEM. Now the system security research group has expanded to a group with two main faculty members and 15 students and research assistants. I have graduated three Master students and one Ph.D. student. Another two Ph.D. students will defend their disertation in summer of 2013. </p>
+	This is a short summary of my achievements in research, teaching, and service. My full CV is <a href="cv-liangzk.pdf">here</a>. If you have suggestions or need more specific information, please email me. I greatly appreciate it. </p>
+    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and advanced research in areas of web and browser security, software component isolation, software debugging, and mobile security. My research has been supported by fundings of over S$1.9 million (S$1.2 million as PI). I have been publishing my research results in top security and software engineering conferences and journals, such as IEEE Security and Privacy, ACM CCS, USENIX Security Symposium, NDSS, ESORICS, ACSAC, ACM FSE, ACM TISSEC, and ACM TOSEM. Now the system security research group has expanded to a group with two main faculty members and 15 students and research assistants. I have graduated three Master students and one Ph.D. student. Another two Ph.D. students will defend their dissertation in summer of 2013. </p>
     <dl>
       <dt><em><strong>Teaching Summary</strong></em>: During the past five years, I completely redeveloped the contents of two security courses, CS3235 <em>Introduction to Computer Security</em> (Undergraduate) and CS5231 <em>Systems Security</em> (Graduate), and created a new course, CS4238 <em>Computer Security Practice</em> (Undergraduate). I introduced a new teaching methodolgy of combining practice in class instruction. My courses and teaching methodology are well received by students (4.5 out of 5 by student evaluation in recent semesters). I also helped to develop security contents in a few undergraduate courses. </dt>
       </dl>
-    <p><em><strong>Service Summary</strong></em>: I have served as the TPC member of several conferences and workshops, including WWW 2011 and NDSS 2013. I'm also the editorial board member of IJSN. I have served as the reviewer of a few major conference and journals, including ACM TISSEC, IEEE TDSC, etc. For university services, I have been a member of the Graduate Study (Admission) Committee of NUS School of Computing. I have been maintaining active connections with Singapore's government divisions, research labs, and companies related to cyber security. I am actively driving the effort to establish a platform in Singapore for academia, government, and companies to collaborate to facilitate research and education of cyber security. </p>
+    <p><em><strong>Service Summary</strong></em>: I have served as the TPC member of several conferences and workshops, including WWW 2011 and NDSS 2013. I have served as a member of the editorial board of the <em>International Journal of Security and Networks (IJSN)</em> since July 2011. I have been the reviewer of a few major conference and journals, including ACM TISSEC, IEEE TDSC, etc. For university services, I have been a member of the Graduate Study (Admission) Committee of NUS School of Computing. I have been maintaining active connections with Singapore's government divisions, research labs, and companies related to cyber security. I am actively driving the effort to establish a platform in Singapore for academia, government, and companies to collaborate to facilitate research and education of cyber security. </p>
 <h2>RESEARCH    </h2>
     <p>Methodology, high-level overview. Rethink</p>
     <h3>Major research achievements.
@@ -117,12 +119,12 @@ Singapore, 117417<br>
         <li>Outstanding Paper Award, the 19th Annual Computer Security Applications Conference (ACSAC), 2003. </li>
       </ul>
 <h3>Funding.</h3>
-<p>My research has been generously supported by fundings from Singapore Ministry of Education (MOE), Ministry of Defense (MINDEF), and NUS through the following projects. (The project values do not include indirect cost.) </p>
+<p>My research has been generously supported by fundings from Singapore Ministry of Education (MOE), Ministry of Defense (MINDEF), and NUS through the following projects (project value not including indirect overhead). </p>
       <ul>
         <li>(PI) <em>Establishing Trusted Web Sessions on Untrusted User Devices</em>. (MOE) AcRF Tier-2, S$383,452, April 2013 – March 2016.</li>
         <li>(PI) <em>Securing the Android Mobile Platform against Browser-based Attacks</em>. (MOE) FRC, S$152,000, August 2011 – August 2014.</li>
         <li>(co-PI) <em>Analyzing the Security of Software in Binary Form</em>. (MINDEF) DRTech, S$371,000, April 2010 – April 2014.</li>
-        <li>(PI) <em>A Framework for General Security Support in Web Browsers</em>. NUS Young Investigator Award, S$477,050, February 2009 – August 2012.</li>
+        <li>(PI) <em>A Framework for General Security Support in Web Browsers</em>. (NUS) Young Investigator Award, S$477,050, February 2009 – August 2012.</li>
         <li>(co-PI) <em>Symbolic Taint Analysis</em>. (MINDEF) DRTech DIRP, S$397,290, January 2009 – July 2012.</li>
         <li>(PI) <em>Improving Security Incident Response by Automatic Vulnerability Diagnosis</em>. (MOE) FRC, S$167,880, October 2008 – September 2011.</li>
       </ul>
@@ -130,7 +132,7 @@ Singapore, 117417<br>
     <p>&nbsp;</p>
 
     <h2>TEACHING</h2>
-    <p>I have been taking a leading role in redesging the system security cirruculum. Redeveloped CS3235 and CS5231. Created CS4238, designed a new teaching lab for system security. </p>
+    <p>I took a leading role in redesging the system security cirruculum in NUS. Redeveloped CS3235 and CS5231. Created CS4238, designed a new teaching lab for system security. </p>
     <p>Teaching metholodogy. </p>
     <p>I have been improving in my teaching skills over the years. </p>
 <table width="683" height="145" border="1">
@@ -184,19 +186,19 @@ Singapore, 117417<br>
   <li>Kailas Patil. 2013. (Dissertation submitted)</li>
 </ul>
 <h2>SERVICE</h2>
-<h3>Service as committee members. </h3>
+<h3>Selected Services for Research Community. </h3>
 <ul>
-  <li>Member of Editorial Board, International Journal of Security and Networks (IJSN), from July 2011. </li>
-  <li>Student Travel Grant Co-Chair, ACM Conference on Computer and Communications Security (CCS), 2012</li>
-  <li>Co-chair of security theme, ACCESS Congress, 2013. </li>
-  <li>TPC member, the Annual Network and Distributed System Security Symposium (NDSS), 2013.</li>
-  <li>TPC member, the International World Wide Web Conference (WWW), 2011.</li>
-  <li>TPC member, ASIACCS 2013. </li>
-  <li>TPC member, ACNS 2012</li>
-  <li>TPC member, the European Workshop on Systems Security (EuroSec), 2009, 2010, 2011. </li>
-  <li>TPC member, ISC 2011, 2012.</li>
-  <li>TPC member, PASSAT 2011, 2012. </li>
-  <li>TPC member, the International Conference on Information Systems Security (ICISS), 2008, 2009, 2010, 2012.</li>
+  <li>Member of Editorial Board,<em> International Journal of Security and Networks (IJSN)</em>, from July 2011. </li>
+  <li>Student Travel Grant Co-Chair, <em>ACM Conference on Computer and Communications Security (CCS)</em>, 2012</li>
+  <li>Co-chair of security theme, the <em>Asian-based Congress on Citizen &amp; Environment Safety and Security (ACCESS)</em>, 2013. </li>
+  <li>TPC member, the <em>Annual Network and Distributed System Security Symposium (NDSS)</em>, 2013.</li>
+  <li>TPC member, the <em>International World Wide Web Conference (WWW)</em>, 2011.</li>
+  <li>TPC member, <em>the ACM Symposium on Information, Computer and Communications Security (ASIACCS),</em> 2013. </li>
+  <li>TPC member, the <em>International Conference on Applied Cryptography and Network Security (ACNS)</em>, 2012</li>
+  <li>TPC member, the <em>European Workshop on Systems Security (EuroSec)</em>, 2009, 2010, 2011. </li>
+  <li>TPC member, the <em>Information Security Conference (ISC)</em>, 2011, 2012.</li>
+  <li>TPC member, the <em>International Conference on Information Privacy, Security, Risk and Trust (PASSAT)</em>, 2011, 2012. </li>
+  <li>TPC member, the<em> International Conference on Information Systems Security (ICISS)</em>, 2008, 2009, 2010, 2012.</li>
 </ul>
     </div>
     <table>
