--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -50,10 +50,10 @@ Singapore, 117417
       </dl>
     <p><em><strong>Service Summary</strong></em>: I have served as the TPC member of several conferences and workshops, including WWW 2011, NDSS 2013, NDSS 2014. I have served as a member of the editorial board of the <em>International Journal of Security and Networks (IJSN)</em> since July 2011. I have been the reviewer of a few major conference and journals, including ACM TISSEC, IEEE TDSC, etc. For university services, I have been a member of the Graduate Study (Admission) Committee of NUS School of Computing. I have been maintaining active connections with Singapore's government divisions, research labs, and companies related to cyber security. I am actively driving the effort to establish a platform in Singapore for academia, government, and companies to collaborate to facilitate research and education of cyber security. </p>
 <h2>RESEARCH    </h2>
-    <p>My research has focused on securing execution environments (such as traditional operating system, web browsers, and mobile platforms) through introducing new security primitives and developing new techniques for debugging and attack diagnosis. </p>
+    <p>Execution environments are the center of computing platforms, such as traditional operating systems, web platforms, and mobile systems. My research has focused on securing execution environments through introducing new security primitives and developing new techniques for debugging and attack diagnosis. </p>
     <p>For new security primitives, I developed techniques to transparently isolate untrusted programs in Linux systems [5], and techniques to confine untrusted JavaScript in the browser environment [3][4]. From such experiences, I rethink the way binary components work in a program, and designed solutions to isolate untrusted program components to prevent backdoors [2] and unexpected side-effects in system and memory [1]. </p>
-    <p>For new debugging and attack diagnosis techniques, I developed techniques to diagnose buffer overflow attacks and mitigate attack recurrences [9]. I also studied recent advanced memory-error exploits and created techniques to diagnose them and classify them based on key attack steps [6]. To efficiently discover software errors and debug such errors, I worked out solutions to systematically detect errors [8] and debug errors [7] using symbolic execution on binaries. </p>
-    <h3>Representative papers. </h3>
+    <p>For debugging and attack diagnosis, I analyzed recent advanced memory-error exploits and created techniques to diagnose and classify them through a type system on binaries [6]. To efficiently discover software errors and debug such errors, I developed solutions to systematically detect errors [8] and debug errors [7] using symbolic execution on binaries. </p>
+    <h3>Representative papers. (<a href="http://www.comp.nus.edu.sg/~liangzk/publications.html"><u>Full List</u></a>)</h3>
     <h4>New Security Primitives in Execution Environments</h4>
     <ul>
       <li><strong>[1] Codejail: Application-transparent Isolation of Libraries with Tight Program Interactions</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/esorics12.pdf">PDF</a>]<br />
@@ -83,9 +83,6 @@ In the 19th Annual Network &amp; Distributed System Security Symposium (NDSS), 
   <li><strong>[8] Towards Automatic Discovery of Deviations in Binary Implementations with Applications to Error Detection and Fingerprint Generation</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/sec07.pdf">PDF</a>]<br />
     David Brumley, Juan Caballero, Zhenkai Liang, James Newsome, and Dawn Song.<br />
     In <em>the 16th USENIX Security Symposium</em>, 2007. <strong>(Best paper award)</strong></li>
-  <li><strong>[9] Fast and Automated Generation of Attack Signatures: A Basis for Building Self-Protecting Servers</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ccs05.pdf">PDF</a>]<br />
-Zhenkai Liang and R. Sekar.<br />
-In <em>the </em><em>12th ACM Conference on Computer and Communications Security (CCS)</em>, 2005.      </li>
 </ul>
 <h3>Research awards. </h3>
       <ul>
