--- a/publications.html
+++ b/publications.html
@@ -55,12 +55,15 @@ Information Security Series, Wenke Lee, Cliff Wang, and David Dagon
 </ol>
 <h3>Journals</h3>
 <ol>
+  <li><strong>SafeStack: Automatically Patching Stack-based Buffer Overflow Vulnerabilities. <br />
+  </strong>Gang Chen, Hai Jin, Deqing Zou, Bing Bing Zhou, Zhenkai Liang, Weide Zheng, and Xuanhua Shi. <br />
+To appear in <em>IEEE Transactions on Dependable and Secure Computing</em>, (Accepted as of May 2013)</li>
   <li><span style="font-weight: bold;">DARWIN: An Approach for
-Debugging Evolving Programs.</span>[<a href="papers/tosem12.pdf">PDF</a>]<br>
+    Debugging Evolving Programs. </span>[<a href="papers/tosem12.pdf">PDF</a>]<br>
     Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil
-Vaswani.<br>
-In <span style="font-style: italic;">ACM Transactions on
-Software Engineering and Methodology (TOSEM), Volume 21, Issue 3, 2012.</span></li>
+    Vaswani.<br>
+    In <span style="font-style: italic;">ACM Transactions on
+      Software Engineering and Methodology (TOSEM), Volume 21, Issue 3, 2012.</span></li>
   <li><b>Alcatraz: An Isolated Environment for Experimenting with
 Untrusted Software</b>. [<a href="papers/tissec09.pdf">PDF</a>]<br>
 Zhenkai Liang, Weiqing Sun, R.Sekar, and V.N. Venkatakrishnan.<br>
@@ -88,7 +91,7 @@ January 2009.&nbsp; </li>
   </li>
 
   <li><span style="font-weight: bold;">
-An Empirical Study of Dangerous Behaviors in Firefox Extensions.</span>[<a href="papers/isc12.pdf">PDF</a>]<br>
+An Empirical Study of Dangerous Behaviors in Firefox Extensions. </span>[<a href="papers/isc12.pdf">PDF</a>]<br>
     Jiangang
 Wang, Xiaohong Li, Xuhui Liu, Xinshu Dong, Junjie Wang, Zhenkai Liang,
 and Zhiyong Feng. <br>
@@ -98,7 +101,7 @@ In <span style="font-style: italic;">the 15th Information Security Conference
 
   <li><span style="font-weight: bold;">
 Codejail: Application-transparent Isolation of Libraries with Tight Program
-Interactions.</span>[<a href="papers/esorics12.pdf">PDF</a>]<br>
+Interactions.</span> [<a href="papers/esorics12.pdf">PDF</a>]<br>
     Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai
 Liang. <br>
 In <span style="font-style: italic;">the 17th European Symposium on Research in Computer
