--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -5,8 +5,7 @@ lang="en" xml:lang="en">
 <head>
 <title>Zhenkai's PT Documents</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<link rel="stylesheet" type="text/css" href="index.css" />
-</head>
+<link rel="stylesheet" type="text/css" href="index.css" /></head>
 <body>
 
 <div class="banner">
@@ -44,7 +43,7 @@ Singapore, 117417
 	Thank you for taking your valuable time to look at my promotion and tenure documents. 
 
 	This is a short summary of my achievements in research, teaching, and service. My full CV is <a href="cv-liangzk.pdf">here</a>. If you have suggestions or need more specific information, please email me. I greatly appreciate it. </p>
-    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and advanced research in areas of web and browser security, software component isolation, software debugging and vulnerability diagnosis. My research has been supported by funding of over S$1.9 million (S$1.2 million as PI). I have been publishing my research results in top security and software engineering conferences and journals, such as IEEE Security and Privacy, ACM CCS, USENIX Security Symposium, NDSS, ESORICS, ACSAC, ACM FSE, ACM TISSEC, and ACM TOSEM.  I have graduated four research Master students and two Ph.D. students. Another Ph.D. student will defend his thesis in summer of 2013. </p>
+    <p><em><strong>Research Summary</strong></em>: I established the system security research group in NUS School of Computing, and advanced research in areas of web and browser security, software component isolation, software debugging and vulnerability diagnosis. My research has been supported by funding of over S$1.9 million (S$1.2 million as PI). I have been publishing my research results in top security and software engineering conferences and journals, such as IEEE Security and Privacy, ACM CCS, USENIX Security Symposium, NDSS, ESORICS, ACSAC, ACM FSE, ACM TISSEC, ACM TOSEM, and IEEE TDSC.  I have graduated four research Master students and two Ph.D. students. Another Ph.D. student will defend his thesis in summer of 2013. </p>
     <dl>
       <dt><em><strong>Teaching Summary</strong></em>: During the past five years, I created a new course, CS4238 <em>Computer Security Practice</em> (Undergraduate), and completely redeveloped the contents of two security courses, CS3235 <em>Introduction to Computer Security</em> (Undergraduate) and CS5231 <em>Systems Security</em> (Graduate). I have been practicing a new teaching method of bringing system security practice in class instruction. My courses and teaching method are well received by students (4.5 out of 5 by student evaluation in recent semesters). I also helped to develop security contents in a few undergraduate courses. </dt>
       </dl>
@@ -52,16 +51,16 @@ Singapore, 117417
 <h2>RESEARCH    </h2>
     <p>Execution environments are the center of computing platforms, such as traditional operating systems, web platforms, and mobile systems. My research has focused on securing execution environments through introducing new security primitives and developing new techniques for debugging and attack diagnosis. </p>
     <p>For new security primitives, I developed techniques to transparently isolate untrusted programs in Linux systems [5], and techniques to confine untrusted JavaScript in the browser environment [3][4]. From such experiences, I rethink the way binary components work in a program, and designed solutions to isolate untrusted program components to prevent backdoors [2] and unexpected side-effects in system and memory [1]. </p>
-    <p>For debugging and attack diagnosis, I analyzed recent advanced memory-error exploits and created techniques to diagnose and classify them through a type system on binaries [6]. To efficiently discover software errors and debug such errors, I developed solutions to systematically detect errors [8] and debug errors [7] using symbolic execution on binaries. </p>
+    <p>For debugging and attack diagnosis, I analyzed recent advanced memory-error exploits and created techniques to diagnose and classify them through a type system on binaries [7]. To efficiently discover software errors and debug such errors, I developed solutions to systematically detect errors [9] and debug errors [8] using symbolic execution on binaries. </p>
     <h3>Representative papers. (<a href="http://www.comp.nus.edu.sg/~liangzk/publications.html"><u>Full List</u></a>)</h3>
     <h4>New Security Primitives in Execution Environments</h4>
     <ul>
       <li><strong>[1] Codejail: Application-transparent Isolation of Libraries with Tight Program Interactions</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/esorics12.pdf">PDF</a>]<br />
         Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai Liang. <br />
-        In the 17th European Symposium on Research in Computer Security (ESORICS), 2012.</li>
+        In <em>the 17th European Symposium on Research in Computer Security (ESORICS)</em>, 2012.</li>
       <li><strong>[2] A Framework to Eliminate Backdoors from Response Computable Authentication</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ieee12.pdf">PDF</a>]<br />
         Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding, Zhenkai Liang, and Wei Zou. <br />
-        In the IEEE Symposium on Security and Privacy, 2012.</li>
+        In <em>the IEEE Symposium on Security and Privacy</em>, 2012.</li>
       <li><strong>[3] AdSentry: Comprehensive and Flexible Confinement of JavaScript-based Advertisements</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/acsac11.pdf">PDF</a>]<br />
         Xinshu Dong, Minh Tran, Zhenkai Liang, and Xuxian Jiang.<br />
         In <em>the 27th Annual Computer Security Applications Conference (ACSAC)</em>,  2011.</li>
@@ -70,19 +69,23 @@ Singapore, 117417
         In <em>the 31st IEEE International Conference on Distributed Computing Systems (ICDCS)</em>,  2011.</li>
       <li><strong>[5] Alcatraz: An Isolated Environment for Experimenting with Untrusted Software</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/tissec09.pdf">PDF</a>]<br />
         Zhenkai Liang, Weiqing Sun, R.Sekar, and V.N. Venkatakrishnan.<br />
-        In ACM Transactions on Information and System Security (TISSEC), Volume 12, Issue 3, January 2009. </li>
+        In <em>ACM Transactions on Information and System Security (TISSEC)</em>, Volume 12, Issue 3, January 2009. </li>
     </ul>
     <h4>Software Error/Vulnerability Detection and Debugging</h4>
 <ul>
-  <li><strong>[6] Identifying and Analyzing Pointer Misuses for Sophisticated Memory-corruption Exploit Diagnosis</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ndss12.pdf">PDF</a>]<br />
-Mingwei Zhang, Aravind Prakash, Xiaolei Li, Zhenkai Liang, and Heng Yin.<br />
-In the 19th Annual Network &amp; Distributed System Security Symposium (NDSS), 2012.</li>
-  <li><strong>[7] DARWIN: An Approach for Debugging Evolving Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/fse09.pdf">PDF</a>]<strong><br />
+  <li><strong>[6] </strong><strong>SafeStack: Automatically Patching Stack-based Buffer Overflow Vulnerabilities. <br />
+    </strong>Gang Chen, Hai Jin, Deqing Zou, Bing Bing Zhou, Zhenkai Liang, Weide Zheng, and Xuanhua Shi. <br />
+      To appear in <em>IEEE Transactions on Dependable and Secure Computing</em>, (Accepted as of May 2013). <strong><br />
+  </strong></li>
+  <li><strong>[7] Identifying and Analyzing Pointer Misuses for Sophisticated Memory-corruption Exploit Diagnosis</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ndss12.pdf">PDF</a>]<br />
+    Mingwei Zhang, Aravind Prakash, Xiaolei Li, Zhenkai Liang, and Heng Yin.<br />
+    In <em>the 19th Annual Network &amp; Distributed System Security Symposium (NDSS)</em>, 2012.</li>
+  <li><strong>[8] DARWIN: An Approach for Debugging Evolving Programs</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/fse09.pdf">PDF</a>]<strong><br />
     </strong>Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, Kapil Vaswani.<br />
     In <em>the ESEC and ACM SIGSOFT Symposium on the Foundations of Software Engineering (ESEC-FSE</em>), 2009. <strong>(Distinguished paper award)</strong></li>
-  <li><strong>[8] Towards Automatic Discovery of Deviations in Binary Implementations with Applications to Error Detection and Fingerprint Generation</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/sec07.pdf">PDF</a>]<br />
+  <li><strong>[9] Towards Automatic Discovery of Deviations in Binary Implementations with Applications to Error Detection and Fingerprint Generation</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/sec07.pdf">PDF</a>]<br />
     David Brumley, Juan Caballero, Zhenkai Liang, James Newsome, and Dawn Song.<br />
-    In <em>the 16th USENIX Security Symposium</em>, 2007. <strong>(Best paper award)</strong></li>
+    In <em>the 16th USENIX Security Symposium</em>, 2007. <strong>(Best paper award</strong></li>
 </ul>
 <h3>Research awards. </h3>
       <ul>
