--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -50,20 +50,20 @@ Singapore, 117417
     <p><em><strong>Service Summary</strong></em>: I have served as the TPC member of several conferences and workshops, including WWW 2011, NDSS 2013, NDSS 2014. I have served as a member of the editorial board of the <em>International Journal of Security and Networks (IJSN)</em> since July 2011. I have been the reviewer of a few major conference and journals, including ACM TISSEC, IEEE TDSC, etc. For university services, I have been a member of the Graduate Study (Admission) Committee of NUS School of Computing. I have been maintaining active connections with Singapore's government divisions, research labs, and companies related to cyber security. I am actively driving the effort to establish a platform in Singapore for academia, government, and companies to collaborate to facilitate research and education of cyber security. </p>
 <h2>RESEARCH    </h2>
     <p>Execution environments are the center of computing platforms, such as traditional operating systems, web platforms, and mobile systems. My research has focused on securing execution environments through introducing new security primitives and developing new techniques for debugging and attack diagnosis. </p>
-    <p>For new security primitives, I developed techniques to transparently isolate untrusted programs in Linux systems [5], and techniques to confine untrusted JavaScript in the browser environment [3][4]. From such experiences, I rethink the way binary components work in a program, and designed solutions to isolate untrusted program components to prevent backdoors [2] and unexpected side-effects in system and memory [1]. </p>
+    <p>For new security primitives, I developed techniques to transparently isolate untrusted programs in Linux systems [5], and techniques to confine untrusted JavaScript in the browser environment [4]. From such experiences, I rethink the way binary components work in a program, and designed solutions to isolate untrusted program components to prevent backdoors [3] and unexpected side-effects in system and memory [2]. </p>
     <p>For debugging and attack diagnosis, I analyzed recent advanced memory-error exploits and created techniques to diagnose and classify them through a type system on binaries [7]. To efficiently discover software errors and debug such errors, I developed solutions to systematically detect errors [9] and debug errors [8] using symbolic execution on binaries. </p>
     <h3>Representative papers. (<a href="http://www.comp.nus.edu.sg/~liangzk/publications.html"><u>Full List</u></a>)</h3>
     <h4>New Security Primitives in Execution Environments</h4>
     <ul>
-      <li><strong>[1] Codejail: Application-transparent Isolation of Libraries with Tight Program Interactions</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/esorics12.pdf">PDF</a>]<br />
+      <li><strong>[1] A Quantitative Evaluation of Privilege Separation in Web Browser Designs</strong>. <br />
+      	Xinshu Dong, Hong Hu, Prateek Saxena, and Zhenkai Liang. <br />
+        In <em>the 18th European Symposium on Research in Computer Security (ESORICS)</em>, 2013.</li>
+      <li><strong>[2] Codejail: Application-transparent Isolation of Libraries with Tight Program Interactions</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/esorics12.pdf">PDF</a>]<br />
         Yongzheng Wu, Sai Sathyanarayan, Roland Yap, and Zhenkai Liang. <br />
         In <em>the 17th European Symposium on Research in Computer Security (ESORICS)</em>, 2012.</li>
-      <li><strong>[2] A Framework to Eliminate Backdoors from Response Computable Authentication</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ieee12.pdf">PDF</a>]<br />
+      <li><strong>[3] A Framework to Eliminate Backdoors from Response Computable Authentication</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ieee12.pdf">PDF</a>]<br />
         Shuaifu Dai, Tao Wei, Chao Zhang, Tielei Wang, Yu Ding, Zhenkai Liang, and Wei Zou. <br />
         In <em>the IEEE Symposium on Security and Privacy</em>, 2012.</li>
-      <li><strong>[3] AdSentry: Comprehensive and Flexible Confinement of JavaScript-based Advertisements</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/acsac11.pdf">PDF</a>]<br />
-        Xinshu Dong, Minh Tran, Zhenkai Liang, and Xuxian Jiang.<br />
-        In <em>the 27th Annual Computer Security Applications Conference (ACSAC)</em>,  2011.</li>
       <li><strong>[4] Towards Fine-Grained Access Control in JavaScript Contexts</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/icdcs11.pdf">PDF</a>]<br />
         Kailas Patil, Xinshu Dong, Xiaolei Li, Zhenkai Liang, and Xuxian Jiang.<br />
         In <em>the 31st IEEE International Conference on Distributed Computing Systems (ICDCS)</em>,  2011.</li>
@@ -85,7 +85,7 @@ Singapore, 117417
     In <em>the ESEC and ACM SIGSOFT Symposium on the Foundations of Software Engineering (ESEC-FSE</em>), 2009. <strong>(Distinguished paper award)</strong></li>
   <li><strong>[9] Towards Automatic Discovery of Deviations in Binary Implementations with Applications to Error Detection and Fingerprint Generation</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/sec07.pdf">PDF</a>]<br />
     David Brumley, Juan Caballero, Zhenkai Liang, James Newsome, and Dawn Song.<br />
-    In <em>the 16th USENIX Security Symposium</em>, 2007. <strong>(Best paper award</strong></li>
+    In <em>the 16th USENIX Security Symposium</em>, 2007. <strong>(Best paper award</strong><strong>)</strong></li>
 </ul>
 <h3>Research awards. </h3>
       <ul>
