--- a/publications.html
+++ b/publications.html
@@ -73,17 +73,23 @@ January 2009.&nbsp; </li>
 </ol>
 <h3>Conferences</h3>
 <ol>
+  <li><span style="font-weight: bold;">A Quantitative Evaluation of Privilege Separation in Web Browser Designs.</span><br />
+    Xinshu Dong, Hong Hu, Prateek Saxena, and Zhenkai Liang. <br />
+    In <span style="font-style: italic;">the 18th European Symposium on Research in Computer Security (ESORICS)</span>, Egham, UK, September 2013.</li>
+  <li><span style="font-weight: bold;">UserCSP- User Specified Content Security Policies.</span><br />
+  Kailas Patil, Tanvi Vyas, Frederik Braun, and Zhenkai Liang. <br />
+  In <span style="font-style: italic;">the 9th Symposium on Usable Privacy and Security (SOUPS)</span>, Newcastle, UK, July 2013. 
+  </li>
   <li><span style="font-weight: bold;">A Comprehensive Client-side
       Behavior Model for Diagnosing Attacks in Ajax
-      Applications. </span>
-    Xinshu Dong, Kailas Patil, Jian Mao, and Zhenkai Liang. 
+      Applications.</span><br />
+    Xinshu Dong, Kailas Patil, Jian Mao, and Zhenkai Liang. <br/>
     In <span style="font-style: italic;">the 18th International
       Conference on Engineering of Complex Computer Systems
-      (ICECCS)</span>, Singapore, July 2013. 
-  </li>
+      (ICECCS)</span>, Singapore, July 2013.  </li>
   <li><span style="font-weight: bold;"> 
   Enforcing System-Wide Control Flow Integrity for Exploit Detection
-  and Diagnosis </span>
+  and Diagnosis.</span><br />
   Aravind Prakash, Heng Yin and Zhenkai Liang. <br>
   In <span style="font-style: italic;"> the 8th ACM Symposium on
   Information, Computer and Communications Security (ASIACCS)</span>,
