--- a/ptdocs/index.html
+++ b/ptdocs/index.html
@@ -75,7 +75,7 @@ Singapore, 117417
 <ul>
   <li><strong>[6] </strong><strong>SafeStack: Automatically Patching Stack-based Buffer Overflow Vulnerabilities. <br />
     </strong>Gang Chen, Hai Jin, Deqing Zou, Bing Bing Zhou, Zhenkai Liang, Weide Zheng, and Xuanhua Shi. <br />
-      To appear in <em>IEEE Transactions on Dependable and Secure Computing</em>, (Accepted as of May 2013). <strong><br />
+      To appear in <em>IEEE Transactions on Dependable and Secure Computing</em> (TDSC), (Accepted as of May 2013). <strong><br />
   </strong></li>
   <li><strong>[7] Identifying and Analyzing Pointer Misuses for Sophisticated Memory-corruption Exploit Diagnosis</strong>. [<a href="http://www.comp.nus.edu.sg/~liangzk/papers/ndss12.pdf">PDF</a>]<br />
     Mingwei Zhang, Aravind Prakash, Xiaolei Li, Zhenkai Liang, and Heng Yin.<br />
