--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@ Information Security Series, Wenke Lee, Cliff Wang, and David Dagon
 <ol>
   <li><strong>SafeStack: Automatically Patching Stack-based Buffer Overflow Vulnerabilities. <br />
   </strong>Gang Chen, Hai Jin, Deqing Zou, Bing Bing Zhou, Zhenkai Liang, Weide Zheng, and Xuanhua Shi. <br />
-To appear in <em>IEEE Transactions on Dependable and Secure Computing</em>, (Accepted as of May 2013)</li>
+To appear in <em>IEEE Transactions on Dependable and Secure Computing (TDSC)</em>, (Accepted as of May 2013)</li>
   <li><span style="font-weight: bold;">DARWIN: An Approach for
     Debugging Evolving Programs. </span>[<a href="papers/tosem12.pdf">PDF</a>]<br>
     Dawei Qi, Abhik Roychoudhury, Zhenkai Liang, and Kapil
@@ -76,7 +76,7 @@ January 2009.&nbsp; </li>
   <li><span style="font-weight: bold;">A Quantitative Evaluation of Privilege Separation in Web Browser Designs.</span><br />
     Xinshu Dong, Hong Hu, Prateek Saxena, and Zhenkai Liang. <br />
     In <span style="font-style: italic;">the 18th European Symposium on Research in Computer Security (ESORICS)</span>, Egham, UK, September 2013.</li>
-  <li><span style="font-weight: bold;">UserCSP- User Specified Content Security Policies.</span><br />
+  <li><span style="font-weight: bold;">UserCSP: User Specified Content Security Policies.</span><br />
   Kailas Patil, Tanvi Vyas, Frederik Braun, and Zhenkai Liang. <br />
   In <span style="font-style: italic;">the 9th Symposium on Usable Privacy and Security (SOUPS)</span>, Newcastle, UK, July 2013. 
   </li>
